--- a/app/views/app_layout.html
+++ b/app/views/app_layout.html
@@ -12,6 +12,11 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#/app/preSurvey">Opinion phase</a></li>
+        <li><a href="">Applicant rating</a></li>
+        <li><a href="">Results</a></li>
+      </ul>
 
     </div> <!-- .navbar-fluid -->
   </div>
