set up d3.js bubble chart

--- a/app/views/presurvey.html
+++ b/app/views/presurvey.html
@@ -1,1 +1,15 @@
-<p>This is the PreSurvey view.</p>
+
+<h2>Let's brainstorm</h2>
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Drop a new keyword or vote things up!</h3>
+  </div>
+  <div id="bubble-chart" class="panel-body">
+
+  </div>
+</div>
+
+<!--include d3 script here since it wont find state element in index-->
+<script src="scripts/d3elements.js"></script>
