--- a/app/views/newsurvey.html
+++ b/app/views/newsurvey.html
@@ -12,8 +12,6 @@
 
   </div>
 
-  <button ng-click="submitNewSurvey()">state</button>
-
   <div class="row">
     <h4>Are we talking about a female or male applicant?</h4>
 
@@ -70,9 +68,9 @@
     <h4>Do you want to ask anything besides "Would you hire that person?"</h4>
 
     <div class="btn-group">
-      <label class="btn btn-primary" ng-model="includeExtraQestions" btn-radio="'yes'" ng-click="submitForm()">Yes, I have extra
+      <label class="btn btn-primary" ng-model="includeExtraQestions" btn-radio="'yes'" ng-click="submitNewSurvey()">Yes, I have extra
         questions</label>
-      <label class="btn btn-primary" ng-model="includeExtraQestions" btn-radio="'no'" ng-click="submitForm()">Thanks, that's
+      <label class="btn btn-primary" ng-model="includeExtraQestions" btn-radio="'no'" ng-click="submitNewSurvey()">Thanks, that's
         enough</label>
     </div>
   </div>
