--- a/app/views/app_layout.html
+++ b/app/views/app_layout.html
@@ -15,7 +15,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#/app/preSurvey">Opinion phase</a></li>
         <li><a href="">Applicant rating</a></li>
-        <li><a href="">Results</a></li>
+        <li><a href="#/app/results">Results</a></li>
       </ul>
 
     </div> <!-- .navbar-fluid -->
